fix spacing issue in datetime in ie (#1504)

--- a/component-lib/app/styles/component-lib/base/form/_form-datetime-picker.scss
+++ b/component-lib/app/styles/component-lib/base/form/_form-datetime-picker.scss
@@ -45,6 +45,8 @@
   @include rsa-font(header);
 
   .numInputWrapper {
+    width: 20%;
+    
     span {
       right: auto;
 
@@ -63,6 +65,7 @@
       &:after {
         margin-left: rsa-whitespace(less);
       }
+
     }
   }
 }
